[package]
name = "redlimit"
version = "0.1.0"
edition = "2021"
description = "A redis-based distributed rate limit HTTP service."
publish = false
repository = "https://github.com/teambition/redlimit"
license-file = "LICENSE"
keywords = ["ratelimit", "redis", "distributed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20"
rustls-pemfile = "1"
actix-web = { version = "4.3", features = ["rustls"] }
actix-utils = "3"
futures-core = "0.3"
tokio = { version = "1.25", features = ["full"] }
tokio-util = "0.7"
rustis = { version = "0.8", features = ["pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
bb8 = "0.8"
config = { version = "0.13", features = ["toml"] }
json_env_logger2 = { version = "0.2", features = ["iso-timestamps"] }
anyhow = "1.0"